Work on the M2 format

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -554,6 +554,27 @@ trnsps [group/channel] [device ID] reset
 
 Sets the transposing for a channel of a device on all note commands, or clears it if the reset bit is high.
 
+## Control command
+
+Bytecode layout:
+```
+[f0]{command type: 8 bits}{command code: 16 bits} {Arbitrary amount of data depending on the former one}
+```
+Human readable form:
+```
+ctrl [rest]
+```
+
+Control commands are used to control the processing of the file in real time.
+
+### Command types
+
+#### Set register
+
+`ctrl setReg R25 6181`
+
+`0x01`/`setReg` will set the register value specified by command code
+
 ## Display command
 
 Bytecode layout:
@@ -567,7 +588,22 @@ display [rest]
 
 Display commands are mostly play significance in displaying stuff in editors, but some of them are play great significance in the human readable form.
 
+### Note on conditional jump commands
+
+Generally, the text parser doesn't do any processing, as certain things like external meddling with the song globals is not present during parsing, and as such conditional jumps are ignored. One must not use display commands to change things like speed on condition, and instead control commands should be used.
+
 ### Command types
+
+#### Display value setting
+
+`0x01`/`setVal` and `0x02`/`setVal64` sets a given value. These commands have 32 and 64 bit data following them respectively.
+
+Currently recognized 32 bit command codes:
+
+* `0x00_01`/`BPM`: Sets the BPM of the current pattern. It's a 32 bit floating point value.
+* `0x00_02`/`timeSignature`: Sets the time signature. It's two 16 bit unsigned integers.
+* `0x00_03`/`clef`: Sets the clef for the supplied channel and device. It's a 16 bit unsigned integer (device ID), and two 8 bit unsigned integers (channel number and clef ID)
+* `0x00_04`/`keySignature`: Sets the key for the supplied channel and device. It's a 16 bit unsigned integer (device ID), and two 8 bit unsigned integers (channel number and key ID)
 
 #### Text displays
 
