Work on the M2 format

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -543,13 +543,13 @@ Could be also useful to notify the sequencer host when a marker has been reached
 
 Bytecode layout:
 ```
-[49]{group/channel: 8 bits}{device ID: 16 bits}{key/mode id: 8 bits}{amount: signed 8 bits/register num}{immediate/register toggle: 1 bit}{reset: 1 bit}{all channels except current: 1 bit}{unused: 13 bits}
+[49]{group/channel: 8 bits}{device ID: 16 bits}{key/mode id: 8 bits}{amount: signed 8 bits/register num}{immediate/register toggle: 1 bit}{reset: 1 bit}{channels exception: 1 bit}{range exception: 1 bit}{range from/to toggle: 1bit}{unused: 11 bits}
 ```
 Human readable form:
 ```
-trnsps [group/channel] [device ID] [key/mode id] [amount: number or register]
+trnsps [device ID] [key/mode id] [amount: number or register]
 ;or
-trnsps [group/channel] [device ID] reset
+trnsps [device ID] reset
 ```
 
 Sets the transposing for a channel of a device on all note commands, or clears it if the reset bit is high.
