Work on the M2 format Stability improvements in test1

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -203,6 +203,10 @@ Note: In this mode, the upper nibble of channel numbers will set the group numbe
 
 # Binary chunk layout
 
+All binary data are little endian (starting with least significant byte) within the following rules:
+* Each 32 bit MIDI2.0 UMPs and all other are the little endian version of what the MIDI2.0 documentation has.
+* Data fields of M2 commands are individually little endian.
+
 ## Chunk header
 
 `ID` = 8 bytes, ASCII characters, unused ones padded with nulls.
