M2 file format specification fix

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -101,15 +101,15 @@ Note: In this mode, the upper nibble of channel numbers will set the group numbe
 
 ### Note off
 
-`m1_nf [ch] [note] [vel]`
+`m1_nf [ch] [vel] [note]` 
 
 ### Note on
 
-`m1_nn [ch] [note] [vel]`
+`m1_nn [ch] [vel] [note]`
 
 ### Polyphonic Aftertouch
 
-`m1_ppres [ch] [note] [vel]`
+`m1_ppres [ch] [vel] [note]`
 
 ### Control change
 
@@ -139,15 +139,15 @@ Note: In this mode, the upper nibble of channel numbers will set the group numbe
 
 ### Note off
 
-`nf [ch] [note] [vel] {[attrType]=attrVal}`
+`nf [ch] [vel] [note] {[attrType]=attrVal}`
 
 ### Note on
 
-`nn [ch] [note] [vel] {[attrType]=attrVal}`
+`nn [ch] [vel] [note] {[attrType]=attrVal}`
 
 ### Polyphonic Aftertouch
 
-`ppres [ch] [note] [vel]`
+`ppres [ch] [vel] [note]`
 
 ### Registered Per-Note Controller Change
 
