Added documentation of saturated math operations

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -471,6 +471,12 @@ Does math or logic operations on registers. Note: RB is used as an intermediate 
 * 18/rsh: RA>>RB = RD
 * 19/ras: RA>>>RB = RD
 * 1a/mov: RA = RD
+* 1b/satadd: Saturated add
+* 1c/satsub: Saturated subtract
+* 1d/satmul: Saturated multiply
+* 1e/satadds: Signed saturated add
+* 1f/satsubs: Signed saturated subtract
+* 20/satmuls: Signed saturated multiply
  
 ## Compare operation
 
