Adding arrays to the M2 specs

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -286,7 +286,7 @@ END
 
 ## Device list
 
-Identifier `DEVLIST`
+Identifier: `DEVLIST`
 
 *Binary Layout:* Each device entry consists of a 16 bit device ID, a byte for string length, and a UTF8 string.
 
@@ -295,8 +295,26 @@ Identifier `DEVLIST`
 ```
 DEVLIST
 [devicename]: [devicenumber]
+[...]
 END
 ```
+
+## Arrays
+
+Identifier: `ARRAY`
+
+*Binary Layout:* Begins with a 32 bit ID, then 32 bit values after each other.
+
+*Human-readable layout:*
+
+```
+ARRAY [name]
+[list of values]
+[...]
+END
+```
+
+Creates an array for operations. Empty arrays are invalid, and length is initialized by the number of values present in the array. Can be used to initialize scales, etc.
 
 # Virtual machine implementation
 
@@ -563,6 +581,24 @@ trnsps [device ID] reset
 ```
 
 Sets the transposing for a channel of a device on all note commands, or clears it if the reset bit is high.
+
+## Array operations
+
+Bytecode layout:
+```
+[4a]{array opcode: 8 bits}{target register: 8 bits}{index register: 8 bits}|{array ID: 32 bits}
+```
+Human readable form:
+```
+[arrayOp] [target register] [index register] [array name]
+```
+### Array opcodes:
+
+* [01]/arrayread: reads array, index turns around.
+* [02]/arraywrite: writes array, index turns around.
+* [03]/arrayreadsat: reads array, index saturates.
+* [04]/arraywritesat: writes array, index saturates.
+* [05]/arraylength: stores array length in target register.
 
 ## Control command
 
